# solice-api

./: .gitignore  README.md  docker-compose.yml  example.config.json  exporter.py  prometheus.yml  pyproject.toml  solis‑grafana-dashboard.json
src/solice_api/: __init__.py  main.py
