[project]
name = "solice-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Muhammad Raffey", email = "muhammadraffey26@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "prometheus-client>=0.21.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "soliscloud-api>=1.2.0",
]

[project.scripts]
get-data = "solice_api:run_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/solice_api"]
